# dora-tui

./: Cargo.toml  README.md
.github/workflows/: ci.yml
binaries/tui/: Cargo.toml
binaries/tui/src/: lib.rs  main.rs
binaries/tui/src/tui/: app.rs  bridge.rs  cli_integration.rs  command_executor.rs  mod.rs  tests.rs
binaries/tui/src/tui/components/: dataflow_list.rs  log_viewer_component.rs  metrics_chart.rs
binaries/tui/src/tui/views/: analysis_tools.rs  collab_features.rs  context_awareness_types.rs  dashboard_types.rs  data_viz.rs  debug_session.rs  help_browser.rs  help_browser_types.rs  log_viewer.rs  log_viewer_types.rs  node_inspector.rs  performance_analyzer_types.rs  settings.rs  settings_types.rs  system_monitor.rs
crates/dora-protocol-client/: Cargo.toml
crates/dora-protocol-client/src/: error.rs  lib.rs
crates/dora-protocol-client/tests/: no_proxy.rs
crates/tui-interface/: Cargo.toml
crates/tui-interface/src/: data.rs
libraries/protocol/: Cargo.toml
libraries/protocol/src/: lib.rs
