[workspace]
members = [
    "crates/tui-interface",
    "crates/dora-protocol-client",
    "libraries/protocol",
    "binaries/tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
repository = "https://github.com/your-org/dora-tui"
homepage = "https://github.com/your-org/dora-tui"
documentation = "https://github.com/your-org/dora-tui"
description = "Standalone Dora TUI workspace (tui-interface, protocol client, and binary)."

[workspace.dependencies]
# shared across all members
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util", "net"] }
tracing = "0.1"
uuid = { version = "1.8", features = ["serde", "v4"] }

[workspace.metadata.cargo-udeps.ignore]
# handy if you use cargo-udeps CI to ignore optional features
dep = []
