[package]
name = "dora-protocol-client"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
description = "Blocking HTTP client that implements tui-interface traits against the Dora protocol gateway."
publish = false

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dora-protocol = { path = "../../libraries/protocol" }
tui-interface = { path = "../../crates/tui-interface" }
thiserror = "1.0"
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
