[package]
name = "dora-protocol"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
description = "Shared protocol data contracts for Dora UI clients and core services."
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }

